# BR-

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Lekser.cpp  Lekser.h  Parser.cpp  Parser.h  README.md  Token.h  TokenType.h  main.cpp
ASTnodes/: ASTNode.h  ASTNodeType.h  AssigmentNode.h  BinaryOpNode.h  IfElseNode.h  NumberNode.h  VariableNode.h  WhileNode.h
